fix: simplify nginx proxy config - remove variables for direct proxy_pass

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -30,23 +30,16 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # API proxy (optional backend)
+    # API proxy to backend
     location /api/ {
-        set $backend_upstream backend:3000;
-        proxy_pass http://$backend_upstream/api/;
+        proxy_pass http://backend:3000/api/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        proxy_connect_timeout 5s;
+        proxy_connect_timeout 10s;
         proxy_read_timeout 60s;
-        
-        # If backend not available, return error
-        error_page 502 503 504 = @api_fallback;
     }
 
     # API fallback when backend not available
