--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "js-yaml": "^4.1.1",
     "qrcode": "^1.5.3",
     "vue": "^3.4.0",
     "vue-i18n": "^9.9.0",
